k8s/special-char-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: special-char-service
  labels:
    app: special-char-service
    app.kubernetes.io/part-of: letter-image-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: special-char-service
      app.kubernetes.io/part-of: letter-image-generator
  template:
    metadata:
      labels:
        app: special-char-service
        app.kubernetes.io/part-of: letter-image-generator
    spec:
      serviceAccountName: ecr-pull-sa
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - name: special-char-service
        image: 037495631109.dkr.ecr.eu-south-2.amazonaws.com/letter-image-generator-special-char-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
