k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: letter-image-generator-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: "letter-image-generator"
    # Enable Route 53 integration
    external-dns.alpha.kubernetes.io/hostname: "l2l.demo.aws.jpamies.com"
spec:
  ingressClassName: alb
  rules:
  - host: "l2l.demo.aws.jpamies.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - path: /generate
        pathType: Prefix
        backend:
          service:
            name: orchestrator
            port:
              number: 80
